--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npm run build",
+    "start": "npm run dev",
     "dev": "nodemon index.js",
     "build": "NODE_ENV=production node index.js"
   },
@@ -21,6 +21,7 @@
     "express": "^4.17.3",
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.0",
+    "firebase": "^9.10.0",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
