--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "build": "NODE_ENV=production node index.js"
   },
   "keywords": [],
-  "author": "Sunday Etom Eni",
+  "author": "https://github.com/etomeni",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/etomeni/smm-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/etomeni/smm-backend/issues"
+  },
+  "homepage": "https://github.com/etomeni/smm-backend#readme",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
@@ -18,15 +26,19 @@
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.17.3",
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.0",
     "firebase": "^9.10.0",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.3",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.5",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
