--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Backend-For-ALL-SMM-BuiltByMe",
-  "version": "1.0.0",
+  "name": "smm-backend",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -35,7 +35,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
-    "mysql2": "^2.3.3",
     "nodemailer": "^6.7.5",
     "uuid": "^8.3.2",
     "validator": "^13.11.0"
